# gord

./: .gitignore  Makefile  README.md  env.example  index.js  package.json  pyproject.toml
src/gord/: agent.py  cli.py  doc_ingest.py  metrics.py  model.py  prompts.py  schemas.py  settings.py  sovfixer.py  tools.py
src/gord/utils/: intro.py  logger.py  ui.py
