[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gord"
version = "0.1.0"
description = "AI agent for E&S."
authors = []
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.27",
    "langchain-openai>=0.3.35",
    "langchain-anthropic>=0.1.22",
    "langchain-google-genai>=2.0.0",
    "openai>=2.2.0",
    "pingintel-api>=0.1.0",
    "prompt-toolkit>=3.0.0",
    "pydantic>=2.11.10",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "pypdf>=4.2.0",
]

[project.scripts]
gord-agent = "gord.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
